relational db update

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
 # Show SQL
 spring.jpa.show-sql=true
+allowPublicKeyRetrieval=true
 
 # Heroku Deployment Port
 #server.port=${PORT:8080}
