--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,21 +1,21 @@
 # Automatically update the database
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 # The database connection URL - jdbc:mysql://localhost:3306/mealTracker_db?useSSL=false
-spring.datasource.url=jdbc:mysql://localhost:3306/mealTracker_db?useSSL=false
+#spring.datasource.url=jdbc:mysql://localhost:3306/mealTracker_db?useSSL=false
 
 # Username
-spring.datasource.username={username}
+#spring.datasource.username={username}
 
 # Password
-spring.datasource.password={password}
+#spring.datasource.password={password}
 
 # Define the database platform
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
 # Show SQL
-spring.jpa.show-sql=true
-allowPublicKeyRetrieval=true
+#spring.jpa.show-sql=true
+#allowPublicKeyRetrieval=true
 
 # Heroku Deployment Port
 #server.port=${PORT:8080}
