--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Automatically update the database
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 # The database connection URL - jdbc:mysql://localhost:3306/mealTracker_db?useSSL=false
 #spring.datasource.url=jdbc:mysql://localhost:3306/mealTracker_db?useSSL=false
