--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.jpa.hibernate.ddl-auto=update
 #spring.datasource.url=jdbc:mysql://localhost:3306/mealTracker_db?useSSL=false
 
 # Username
-#spring.datasource.username={username}
+#spring.datasource.username={root}
 
 # Password
 #spring.datasource.password={password}
